<resources>
    <string name="app_name">QuanLyNhaHang</string>
    <string name="quenmk">Quên mật khẩu</string>
    <string name="dangky_nv">Nhân viên mới</string>
    <string name="dangky_nh">Đăng ký nhà hàng mới</string>
    <string name="saithongtin">Số điện thoại hoặc Mật khẩu không đúng</string>
    <string name="thieuthongtin">Vui lòng nhập đủ thông tin</string>
    <string name="dungthongtin">Chưa có gì</string>
    <string name="ten_nh">Tên nhà hàng</string>
    <string name="diachi_nh">Địa chỉ</string>
    <string name="ten_chu">Họ và tên</string>
    <string name="sdt_chu">Số điện thoại</string>
    <string name="email_chu">Email</string>
    <string name="cmnd_chu">CMND</string>
    <string name="matkhau_dn">Mật khẩu</string>
    <string name="matkhau2_dn">Nhập lại mật khẩu</string>
    <string name="daco_tk">Đã có tài khoản</string>
    <string name="chuaco_tk">Đăng ký tài khoản</string>
    <string name="dangky">Đăng ký</string>
    <string name="dathem">Đã thêm</string>
    <string name="daupdate">Đã cập nhật</string>
    <string name="daxoa">Đã xóa</string>
    <string name="facebook_app_id">2239823716261865</string>
    <string name="fb_login_protocol_scheme">fb2239823716261865</string>


</resources>
